# blender-addon-template

./: README.md  pyproject.toml
scripts/: make-release.py
src/: __init__.py
