[project]
name = "blender-addon-template"
version = "0.0.1"
description = "A blender addon template for getting up and running quickly"
authors = [
    {name = "ranjian0", email = "karanjaichungwa@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
lint = [
    "black>=23.9.1",
    "mypy>=1.5.1",
    "fake-bpy-module-latest>=20231009",
    "ruff>=0.0.292",
    "types-toml>=0.10.8.7",
]
build = [
    "toml>=0.10.2",
]

[tool.pdm.scripts]
test = {cmd = "pytest tests"}
build = {cmd = "python scripts/make-release.py"}
format = {cmd = "black src"}
check = {cmd = "mypy src"}

[tool.black]
line-length = 88

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
strict_optional = true
disallow_subclassing_any = false
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
